--- a/index.html
+++ b/index.html
@@ -7,34 +7,65 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="css/style.css">
-</head>
+    <link rel="stylesheet" href="css/style.css"> </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-lg fixed-top">
             <div class="container">
                 <a class="navbar-brand d-flex align-items-center" href="index.html">
-                    <img src="assets/img/logo.png"  class="me-2" style="height: 50px;">
-                    <h1 class="mb-0">Biblioteca de Formación Docente</h1>
+                    <img src="assets/img/logo_fd.png" class="me-2" style="height: 50px;">
                 </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-auto">
+                    <ul class="navbar-nav ms-auto align-items-lg-center">
                         <li class="nav-item">
                             <a class="nav-link" href="index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href=".libros">Catálogo</a>
+                            <a class="nav-link" href="#libros">Catálogo</a>
                         </li>
                         <li class="nav-item">
-                            <a href="https://gamma.app/create" target="_blank" class="btn btn-primary">Crear Resumen</a>
+                            <a href="https://gamma.app/create" target="_blank" class="btn btn-primary me-lg-2 mt-2 mt-lg-0">Crear Resumen</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="upload-form.html" class="btn btn-info mt-2 mt-lg-0">
+                                <i class="fas fa-upload me-2"></i>Cargar Libro
+                            </a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
+
+        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+            <div class="offcanvas-header">
+                <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Menú de Navegación</h5>
+                <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            </div>
+            <div class="offcanvas-body">
+                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="index.html" data-bs-dismiss="offcanvas">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#libros" data-bs-dismiss="offcanvas">Catálogo</a>
+                    </li>
+                    <li class="nav-item mt-3">
+                        <a href="https://gamma.app/create" target="_blank" class="btn btn-primary" data-bs-dismiss="offcanvas">
+                            <i class="fas fa-file-alt me-2"></i>Crear Resumen
+                        </a>
+                    </li>
+                    <li class="nav-item mt-3">
+                        <a href="upload-form.html" class="btn btn-info" data-bs-dismiss="offcanvas">
+                            <i class="fas fa-upload me-2"></i>Cargar Libro
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </header>
 
     <main>
@@ -115,5 +146,34 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/libros.js"></script>
+    <script>
+        // Script para el scroll suave en el enlace del Catálogo
+        document.addEventListener('DOMContentLoaded', function() {
+            const catalogoLink = document.querySelector('a[href="#libros"]');
+            if (catalogoLink) {
+                catalogoLink.addEventListener('click', function(e) {
+                    e.preventDefault();
+                    document.querySelector(this.getAttribute('href')).scrollIntoView({
+                        behavior: 'smooth'
+                    });
+                     // Cerrar el offcanvas después de hacer clic en un enlace (si está abierto)
+                    const offcanvas = bootstrap.Offcanvas.getInstance(document.getElementById('offcanvasNavbar'));
+                    if (offcanvas) {
+                        offcanvas.hide();
+                    }
+                });
+            }
+
+            // También cierra el offcanvas si se hace clic en cualquier enlace dentro de él
+            document.querySelectorAll('#offcanvasNavbar .nav-link, #offcanvasNavbar .btn').forEach(link => {
+                link.addEventListener('click', () => {
+                    const offcanvas = bootstrap.Offcanvas.getInstance(document.getElementById('offcanvasNavbar'));
+                    if (offcanvas) {
+                        offcanvas.hide();
+                    }
+                });
+            });
+        });
+    </script>
 </body>
 </html>
